src/objects/Insurance_Verification__c.object
<CustomObject>
    <fields>
        <fullName>AOR_and_COB_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AOR and COB Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_SA_MH_Combined__c</fullName>
        <label>Are SA &amp; MH Combined?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_there_any_SA_exclusions__c</fullName>
        <label>Are there any SA exclusions?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auth_Notes__c</fullName>
        <description>Authorization notes if applicable</description>
        <label>Auth Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Avg_Lab_Reimbursement__c</fullName>
        <label>Avg Lab Reimbursement</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BB_Policy_Type__c</fullName>
        <formula>IF(AND(ISPICKVAL(Policy_Type__c, &quot;Choice Plus&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Haven Detox&quot;)), 1,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;Choice Plus&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Recovery Team&quot;)), 1,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;EPO&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Haven Detox&quot;)), 2,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;EPO&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Recovery Team&quot;)), 2,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;HMO&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Haven Detox&quot;)), 3,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;HMO&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Recovery Team&quot;)), 3,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;Open Access&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Haven Detox&quot;)), 4,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;Open Access&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Recovery Team&quot;)), 4,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;Open Access Plus&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Haven Detox&quot;)), 5,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;Open Access Plus&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Recovery Team&quot;)), 5,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;POS&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Haven Detox&quot;)), 7,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;POS&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Recovery Team&quot;)), 7,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;POS2&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Haven Detox&quot;)), 8,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;POS2&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Recovery Team&quot;)), 8,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;PPO&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Haven Detox&quot;)), 9,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;PPO&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Recovery Team&quot;)), 9,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;Indemnity&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Haven Detox&quot;)), 6,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;Indemnity&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Recovery Team&quot;)), 6,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;Choice Plus&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Lake Ave&quot;)), 13,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;EPO&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Lake Ave&quot;)), 14,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;HMO&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Lake Ave&quot;)), 15,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;Open Access&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Lake Ave&quot;)), 16,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;Open Access Plus&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Lake Ave&quot;)), 17,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;Indemnity&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Lake Ave&quot;)), 18,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;POS&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Lake Ave&quot;)), 19,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;POS2&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Lake Ave&quot;)), 20,
IF(AND(ISPICKVAL(Policy_Type__c, &quot;PPO&quot;), INCLUDES(Opportunity__r.Facility_Interest__c, &quot;Lake Ave&quot;)), 21,
0)))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BB Policy Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BH_Claims_Address__c</fullName>
        <label>BH Claims Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>COBRA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COBRA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calculator_OOP__c</fullName>
        <formula>IF(text( Is_deductible_included_in_OOP__c )=&quot;yes&quot;,if( OOP_Remaining__c =0,OOP_Remaining__c,OOP_Remaining__c),OOP_Remaining__c+ Deductible_Remaining__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculator OOP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calender_or_Plan_Year__c</fullName>
        <label>Calender or Plan Year</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Claims_Address__c</fullName>
        <label>Medical Claims Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confirm_Cobra_Effective_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm Cobra Effective Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_Date_Employment_Terminated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm Date Employment Terminated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_if_Job_Terminated_Jeopardy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm if Job Terminated/Jeopardy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_if_Pt_has_applied_for_FMLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm if Pt has applied for FMLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Primary_Insured_and_explain_P2P__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Primary Insured and explain P2P</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_and_Time_of_VOB__c</fullName>
        <label>Date and Time of VOB</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Intake__c</fullName>
        <formula>Opportunity__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Intake</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_COB_Update__c</fullName>
        <label>Date of Last COB Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deductible_Met__c</fullName>
        <label>OON Deductible Met</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deductible_Remaining__c</fullName>
        <formula>Deductible__c - Deductible_Met__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON Deductible Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <label>OON Deductible</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Detox_Benefits__c</fullName>
        <label>Detox Benefits</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Detox_Copay__c</fullName>
        <label>Detox Copay</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detox_Days_Auth_d__c</fullName>
        <description>Detox Days Auth&apos;d on most recent admission</description>
        <inlineHelpText>pulled from most recent admisssion</inlineHelpText>
        <label>Detox Days Auth&apos;d</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_INN_and_OON_cross_accumulate__c</fullName>
        <label>Do INN and OON cross accumulate?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_payments_go_to_patient_or_facility__c</fullName>
        <label>Do payments go to patient or facility?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FACILITY</fullName>
                </value>
                <value>
                    <fullName>PATIENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Insured_Info_and_Send_Envelopes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document Insured Info and Send Envelopes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_Coinsurance_Apply__c</fullName>
        <label>Does Coinsurance Apply?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EIV__c</fullName>
        <formula>if( OOP__c =0,( Total_Est_Charges__c - Deductible_Remaining__c )* Inpatient_Co_insurance__c ,if((Total_Est_Charges__c-Deductible_Remaining__c )*(1-Inpatient_Co_insurance__c)&gt; Calculator_OOP__c ,Total_Est_Charges__c-Calculator_OOP__c-Deductible_Remaining__c,(Total_Est_Charges__c-Deductible_Remaining__c)*Inpatient_Co_insurance__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EIV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ERISA_Plan__c</fullName>
        <label>ERISA Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_Group_Pt_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employer Group-Pt Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Est_Detox_Days__c</fullName>
        <label>Est Detox Days</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Detox_Rate__c</fullName>
        <label>Est Detox Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_INN_Total_Charges__c</fullName>
        <formula>( Est_Detox_Days__c * INN_Detox_Rate__c )+( Est_Res_Days__c * INN_Res_Rate__c )+( INN_PHP_Rate__c * Est_PHP_Days__c )+( Est_IOP_Days__c * INN_IOP_Rate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est INN Total Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_IOP_Days__c</fullName>
        <label>Est IOP Days</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_IOP_Rate__c</fullName>
        <label>Est IOP Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_PHP_Days__c</fullName>
        <label>Est PHP Days</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_PHP_Rate__c</fullName>
        <label>Est PHP Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Res_Days__c</fullName>
        <label>Est Res Days</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Res_Rate__c</fullName>
        <label>Est Res Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Deductible_MET__c</fullName>
        <label>Family Deductible MET</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Deductible__c</fullName>
        <label>Family Deductible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_OOP_MET__c</fullName>
        <label>Family OOP MET</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_OOP__c</fullName>
        <label>Family OOP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Geographic_Restriction_Notes__c</fullName>
        <label>Geographic Restriction Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geographic_restrictions__c</fullName>
        <label>Are there any geographic restrictions?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>H0010_IP_Detox_Rev_0126__c</fullName>
        <description>Detoc LOC H and Rev code</description>
        <inlineHelpText>Is this code a covered service?</inlineHelpText>
        <label>H0010 (IP Detox) Rev 0126</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H0015_S9480_IOP_Rev_0906__c</fullName>
        <description>IOP H and Rev Code</description>
        <inlineHelpText>Is this code a covered service?</inlineHelpText>
        <label>H0015/S9480 (IOP) Rev 0906</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H0018_Residential_Rev_1002__c</fullName>
        <description>Residential Rev Code</description>
        <inlineHelpText>Is this code a covered service?</inlineHelpText>
        <label>H0018 (Residential) Rev 1002</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H2036_S0201_PHP_Rev_0912__c</fullName>
        <description>PHP H and Rev Code</description>
        <inlineHelpText>Is this code a covered serrvice?</inlineHelpText>
        <label>H2036/S0201/ (PHP) Rev 0912</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Insurance_Co__c</fullName>
        <label>Hidden Insurance Co</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Insurance_ID__c</fullName>
        <label>Hidden Insurance ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_Calculator_OOP__c</fullName>
        <formula>IF(text( Is_deductible_included_in_OOP__c )=&quot;yes&quot;,if( INN_OOP_Remaining__c =0,INN_OOP_Remaining__c,INN_OOP_Remaining__c),INN_OOP_Remaining__c+ INN_Ded_Remaining__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN Calculator OOP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_Ded_Met__c</fullName>
        <label>INN Ded Met</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_Ded_Remaining__c</fullName>
        <formula>INN_Ded__c - INN_Ded_Met__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN Ded Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_Ded__c</fullName>
        <label>INN Ded</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_Detox_Rate__c</fullName>
        <label>INN Detox Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_EIV__c</fullName>
        <formula>if( INN_OOP__c =0,(  Est_INN_Total_Charges__c  - INN_Ded_Remaining__c )*   INN_Inpt__c ,if((Est_INN_Total_Charges__c-INN_Ded_Remaining__c )*(1-INN_Inpt__c )&gt; INN_Calculator_OOP__c ,Est_INN_Total_Charges__c-INN_Calculator_OOP__c-INN_Ded_Remaining__c,(Est_INN_Total_Charges__c-INN_Ded_Remaining__c)*INN_Inpt__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN EIV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_Family_Ded_MET__c</fullName>
        <label>INN Family Ded MET</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_Family_Ded__c</fullName>
        <label>INN Family Ded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_Family_OOP_MET__c</fullName>
        <label>INN Family OOP MET</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_Family_OOP__c</fullName>
        <label>INN Family OOP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_IOP_Rate__c</fullName>
        <label>INN IOP Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_Inpt__c</fullName>
        <label>INN Inpt Coinsurance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>INN_OOP_Met__c</fullName>
        <label>INN OOP Met</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_OOP_Remaining__c</fullName>
        <formula>INN_OOP__c - INN_OOP_Met__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN OOP Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_OOP__c</fullName>
        <label>INN OOP</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_Outpatient_Coinsurance__c</fullName>
        <label>INN Outpatient Coinsurance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>INN_PHP_Rate__c</fullName>
        <label>INN PHP Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_Res_Rate__c</fullName>
        <label>INN Res Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IOP_Benefits__c</fullName>
        <label>IOP Benefits</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IOP_Copay__c</fullName>
        <label>IOP Copay</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOP_Days_Auth_d__c</fullName>
        <description>Days of IOP authorized on last admission</description>
        <label>IOP Days Auth&apos;d</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_Tricare_Select_or_Prime__c</fullName>
        <label>If Tricare Select or Prime?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>prime</fullName>
                    <label>PRIME</label>
                </value>
                <value>
                    <fullName>select</fullName>
                    <label>SELECT</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_carve_out_BH_Member_ID__c</fullName>
        <label>If carve out, BH Member ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_carve_out_insurance_name_and_number__c</fullName>
        <label>If carve out, insurance name and number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_child_dependent_when_age_off__c</fullName>
        <label>If child dependent, when age off?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Include_Assignment_Designation_of_Rep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Assignment/Designation of Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inpatient_Co_insurance__c</fullName>
        <label>OON Inpatient Co-insurance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ins_Rep_Name_and_Reference_Number__c</fullName>
        <label>Ins Rep Name and Reference Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_Name_frm__c</fullName>
        <formula>Opportunity__r.Insurance_Company_Name_Lookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insurance Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Company__c</fullName>
        <label>Insurance Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Phone__c</fullName>
        <label>Insurance Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Insurance_type__c</fullName>
        <label>Insurance type?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_AOB_Accepted__c</fullName>
        <label>Is AOB Accepted?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_BH_carved_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is BH carved out?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Freestanding_Covered__c</fullName>
        <label>Is Freestanding Covered?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_OOS_cov__c</fullName>
        <label>Is OOS covered?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Subacute_Detox_Covered__c</fullName>
        <label>Is Subacute Detox Covered?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_deductible_included_in_OOP__c</fullName>
        <label>Is deductible included in OOP?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_patient_a_child_dependent_on_policy__c</fullName>
        <label>Is patient a child dependent on policy?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_policy_INN_or_OON__c</fullName>
        <label>Is policy INN or OON?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Network</fullName>
                </value>
                <value>
                    <fullName>Out-of-Network</fullName>
                </value>
                <value>
                    <fullName>Both benefits quoted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_policy_in_a_grace_period__c</fullName>
        <label>Is policy in a grace period?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_policy_primary__c</fullName>
        <label>Is the policy primary?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_Marketplace_Exchange_policy__c</fullName>
        <label>Is this a Marketplace/Exchange policy?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_cobra_policy__c</fullName>
        <label>Is this a cobra policy?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <formula>TEXT(Opportunity__r.LeadSource)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <formula>text( Patient__r.Status )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketplace_Exchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketplace/Exchange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medicar_Plan_Not_Covered__c</fullName>
        <label>Medicare Plan (Not Covered)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <formula>Opportunity__r.Member_ID_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Id_new__c</fullName>
        <label>Member Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiplan__c</fullName>
        <label>Multiplan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Account__c</fullName>
        <label>National Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_if_Other_Insurance_Type__c</fullName>
        <label>Notes if Other Insurance Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notify_Facility_for_AOB_Assistance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Facility for AOB Assistance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_Facility_for_Address_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Facility for Address Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_Facility_for_FMLA_Assistance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Facility for FMLA Assistance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_facility_for_COB_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify facility for COB Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OOP_Met__c</fullName>
        <label>OON OOP Met</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OOP_Remaining__c</fullName>
        <formula>OOP__c - OOP_Met__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON OOP Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>